--- a/app/src/main/res/drawable/call_button_background.xml
+++ b/app/src/main/res/drawable/call_button_background.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/blue2" />
-    <corners android:radius="15dp" />
+    <solid android:color="#63D13A" />
+    <corners android:radius="10dp" />
 </shape>
