--- a/app/src/main/res/layout/driver_login.xml
+++ b/app/src/main/res/layout/driver_login.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/darkblue1"
+        android:elevation="4dp"
+        android:theme="@style/DotsDarkTheme"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 <LinearLayout
     android:layout_width="wrap_content"
@@ -14,86 +25,64 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
     app:layout_constraintBottom_toBottomOf="parent"
     android:orientation="vertical">
 
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
+        android:id="@+id/name"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="Name"
-        app:counterEnabled="true"
-        app:counterMaxLength="30"
-        app:endIconDrawable="@drawable/text_fields"
-        android:textColorHint="@color/colorPrimary"
-        app:endIconMode="custom"
-        app:errorEnabled="true">
+        android:textColorHint="@color/gainsboro"
+        android:background="@drawable/edittext_background"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:inputType="text"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
+        android:id="@+id/phone"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="Phone No."
-        app:counterEnabled="true"
-        app:counterMaxLength="30"
-        app:endIconDrawable="@drawable/phone"
-        android:textColorHint="@color/colorPrimary"
-        app:endIconMode="custom"
-        app:errorEnabled="true">
+        android:textColorHint="@color/gainsboro"
+        android:background="@drawable/edittext_background"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="20dp"
+        android:inputType="phone"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/phone_no"
-            android:inputType="phone"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="Licence No."
-        app:counterEnabled="true"
-        app:counterMaxLength="30"
-        app:endIconDrawable="@drawable/confirmation_number"
-        android:textColorHint="@color/colorPrimary"
-        app:endIconMode="custom"
-        app:errorEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/licence_no"
-            android:inputType="text"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
+        android:id="@+id/email"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="Email"
-        app:counterEnabled="true"
-        app:counterMaxLength="30"
-        app:endIconDrawable="@drawable/email"
-        android:textColorHint="@color/colorPrimary"
-        app:endIconMode="custom"
-        app:errorEnabled="true">
+        android:textColorHint="@color/gainsboro"
+        android:background="@drawable/edittext_background"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="20dp"
+        android:inputType="textEmailAddress"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/email"
-            android:inputType="textEmailAddress"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
+    <EditText
+        android:id="@+id/licence_no"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:hint="Licence No."
+        android:textColorHint="@color/gainsboro"
+        android:background="@drawable/edittext_background"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="20dp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:id="@+id/login"
-        android:text="LOGIN"
+        android:text="REGISTER"
         android:background="@drawable/button_background"
-        android:textColor="@color/white"/>
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:textColor="@color/black"
+        android:layout_marginTop="100dp"
+        android:paddingStart="70dp"
+        android:paddingRight="70dp"/>
 
 </LinearLayout>
 
